@@ -546,6 +546,11 @@ class QueryCommand(_AbstractQueryCommand):
         kw['pathList'] = argSet.pop('path', [])
         kw['pristine'] = not argSet.pop('no-pristine', False)
 
+        import time
+        while True:
+            print 'Here! (%s)' % os.getpid()
+            time.sleep(1)
+
         kw['recurse'] = argSet.pop('recurse', None)
         if 'no-recurse' in argSet:
             kw['recurse'] = False
@@ -915,7 +920,8 @@ def _getPreCommandOptions(argv, cfg):
     return argSet, [argv[0]] + otherArgs
 
 
-def realMain(cfg, argv=sys.argv):
+def realMain(cfg, argv=sys.argv, debugAll=False, 
+             debuggerException=errors.InternalConaryError):
     cfgMap = {}
 
     if '--version' in argv or '-v' in argv:
@@ -926,6 +932,8 @@ def realMain(cfg, argv=sys.argv):
         # get options before the command.  Only generic options are 
         # allowed.
         argSet, argv = _getPreCommandOptions(argv, cfg)
+    except debuggerException, e:
+        raise
     except options.OptionError, e:
         usage()
         print >> sys.stderr, e
@@ -958,6 +966,8 @@ def realMain(cfg, argv=sys.argv):
                                                     version=constants.version,
                                                     useHelp=True,
                                                     defaultGroup=defaultGroup)
+    except debuggerException, e:
+        raise
     except options.OptionError, e:
         e.parser.print_help()
         print >> sys.stderr, e
@@ -971,7 +981,8 @@ def realMain(cfg, argv=sys.argv):
     thisCommand.processConfigOptions(cfg, cfgMap, argSet)
 
     # the user might have specified --config debugExceptions on the commandline
-    sys.excepthook = util.genExcepthook(debug=cfg.debugExceptions)
+    sys.excepthook = util.genExcepthook(debug=cfg.debugExceptions,
+                                        debugCtrlC=debugAll)
 
     context = cfg.context
     if os.path.exists('CONARY'):
@@ -989,7 +1000,8 @@ def realMain(cfg, argv=sys.argv):
         cfg.buildLabel = cfg.installLabelPath[0]
 
     # now set the debug hook using the potentially new cfg.debugExceptions value
-    sys.excepthook = util.genExcepthook(debug=cfg.debugExceptions)
+    sys.excepthook = util.genExcepthook(debug=cfg.debugExceptions,
+                                        debugCtrlC=debugAll)
 
     if cfg.installLabelPath:
         cfg.installLabel = cfg.installLabelPath[0]
@@ -1043,8 +1055,9 @@ def main(argv=sys.argv):
         if debugAll:
             ccfg.debugExceptions = True
         # reset the excepthook (using cfg values for exception settings)
-        sys.excepthook = util.genExcepthook(debug=ccfg.debugExceptions)
-        return realMain(ccfg, argv)
+        sys.excepthook = util.genExcepthook(debug=ccfg.debugExceptions,
+                                            debugCtrlC=debugAll)
+        return realMain(ccfg, argv, debugAll, debuggerException)
     except IOError, e:
         # allow broken pipe to exit
         if e.errno != errno.EPIPE:
